--- a/DataPreProcessing.ipynb
+++ b/DataPreProcessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "[389 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "[389 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
        "[389 rows x 14 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "[371 rows x 14 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2004,17 +2004,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df.drop_duplicates(subset =[\"SCHOOL_NAME\",\n",
-    "                     keep = False)"
+    "df2 = df.drop_duplicates(subset =\"SCHOOL_NAME\",\n",
+    "                     keep = 'first')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2244,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>353 rows × 14 columns</p>\n",
+       "<p>362 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2300,10 +2300,10 @@
        "369                1     0  \n",
        "370               17     0  \n",
        "\n",
-       "[353 rows x 14 columns]"
+       "[362 rows x 14 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,11 +2321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('destination_school.csv')"
+    "df2.to_csv('destination_school.csv')"
    ]
   },
   {
