--- a/DataPreProcessingSalary.ipynb
+++ b/DataPreProcessingSalary.ipynb
@@ -2133,16 +2133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2295, 44)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "salary_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2283,7 @@
        "15            10600          Bellingen   35,835    36,601    35,924 "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2436,7 @@
        "[539 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,16 +2447,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>5</th>\n",
+       "      <th>LGA</th>\n",
+       "      <th>LGA NAME</th>\n",
+       "      <th>2015-16</th>\n",
+       "      <th>2016-17</th>\n",
+       "      <th>2017-18</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47,692</td>\n",
+       "      <td>48,360</td>\n",
+       "      <td>49,805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>48,085</td>\n",
+       "      <td>48,700</td>\n",
+       "      <td>50,153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10050</td>\n",
+       "      <td>Albury</td>\n",
+       "      <td>45,504</td>\n",
+       "      <td>46,426</td>\n",
+       "      <td>47,732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10130</td>\n",
+       "      <td>Armidale Regional</td>\n",
+       "      <td>40,733</td>\n",
+       "      <td>41,120</td>\n",
+       "      <td>42,220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10250</td>\n",
+       "      <td>Ballina</td>\n",
+       "      <td>39,782</td>\n",
+       "      <td>40,362</td>\n",
+       "      <td>42,246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>10300</td>\n",
+       "      <td>Balranald</td>\n",
+       "      <td>42,282</td>\n",
+       "      <td>45,080</td>\n",
+       "      <td>46,868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>10470</td>\n",
+       "      <td>Bathurst Regional</td>\n",
+       "      <td>47,746</td>\n",
+       "      <td>48,373</td>\n",
+       "      <td>49,633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>10500</td>\n",
+       "      <td>Bayside</td>\n",
+       "      <td>47,809</td>\n",
+       "      <td>48,383</td>\n",
+       "      <td>49,445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>10550</td>\n",
+       "      <td>Bega Valley</td>\n",
+       "      <td>37,270</td>\n",
+       "      <td>37,366</td>\n",
+       "      <td>38,318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>10600</td>\n",
+       "      <td>Bellingen</td>\n",
+       "      <td>35,835</td>\n",
+       "      <td>36,601</td>\n",
+       "      <td>35,924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>10650</td>\n",
+       "      <td>Berrigan</td>\n",
+       "      <td>38,513</td>\n",
+       "      <td>38,652</td>\n",
+       "      <td>40,157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>10750</td>\n",
+       "      <td>Blacktown</td>\n",
+       "      <td>50,647</td>\n",
+       "      <td>51,422</td>\n",
+       "      <td>52,802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>10800</td>\n",
+       "      <td>Bland</td>\n",
+       "      <td>40,728</td>\n",
+       "      <td>40,743</td>\n",
+       "      <td>40,816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>10850</td>\n",
+       "      <td>Blayney</td>\n",
+       "      <td>45,397</td>\n",
+       "      <td>45,846</td>\n",
+       "      <td>47,530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>10900</td>\n",
+       "      <td>Blue Mountains</td>\n",
+       "      <td>47,705</td>\n",
+       "      <td>48,325</td>\n",
+       "      <td>49,788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>10950</td>\n",
+       "      <td>Bogan</td>\n",
+       "      <td>47,806</td>\n",
+       "      <td>46,446</td>\n",
+       "      <td>45,717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>11150</td>\n",
+       "      <td>Bourke</td>\n",
+       "      <td>49,471</td>\n",
+       "      <td>51,680</td>\n",
+       "      <td>50,405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>11200</td>\n",
+       "      <td>Brewarrina</td>\n",
+       "      <td>45,005</td>\n",
+       "      <td>46,261</td>\n",
+       "      <td>44,520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>11250</td>\n",
+       "      <td>Broken Hill</td>\n",
+       "      <td>48,050</td>\n",
+       "      <td>49,696</td>\n",
+       "      <td>50,628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>11300</td>\n",
+       "      <td>Burwood</td>\n",
+       "      <td>41,388</td>\n",
+       "      <td>40,811</td>\n",
+       "      <td>40,562</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "5               LGA           LGA NAME   2015-16   2016-17   2017-18\n",
+       "6        Australia                 NaN   47,692    48,360    49,805 \n",
+       "7   New South Wales                NaN   48,085    48,700    50,153 \n",
+       "8             10050             Albury   45,504    46,426    47,732 \n",
+       "9             10130  Armidale Regional   40,733    41,120    42,220 \n",
+       "10            10250            Ballina   39,782    40,362    42,246 \n",
+       "11            10300          Balranald   42,282    45,080    46,868 \n",
+       "12            10470  Bathurst Regional   47,746    48,373    49,633 \n",
+       "13            10500            Bayside   47,809    48,383    49,445 \n",
+       "14            10550        Bega Valley   37,270    37,366    38,318 \n",
+       "15            10600          Bellingen   35,835    36,601    35,924 \n",
+       "16            10650           Berrigan   38,513    38,652    40,157 \n",
+       "17            10750          Blacktown   50,647    51,422    52,802 \n",
+       "18            10800              Bland   40,728    40,743    40,816 \n",
+       "19            10850            Blayney   45,397    45,846    47,530 \n",
+       "20            10900     Blue Mountains   47,705    48,325    49,788 \n",
+       "21            10950              Bogan   47,806    46,446    45,717 \n",
+       "22            11150             Bourke   49,471    51,680    50,405 \n",
+       "23            11200         Brewarrina   45,005    46,261    44,520 \n",
+       "24            11250        Broken Hill   48,050    49,696    50,628 \n",
+       "25            11300            Burwood   41,388    40,811    40,562 "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "salary_df2.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2829,7 @@
        "[2295 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2769,7 +3002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2821,23 +3054,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>6</th>\n",
        "      <td>Australia</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>47,692</td>\n",
        "      <td>48,360</td>\n",
        "      <td>49,805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>7</th>\n",
        "      <td>New South Wales</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>48,085</td>\n",
        "      <td>48,700</td>\n",
        "      <td>50,153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>8</th>\n",
        "      <td>10050</td>\n",
        "      <td>Albury</td>\n",
        "      <td>45,504</td>\n",
@@ -2845,7 +3078,7 @@
        "      <td>47,732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>9</th>\n",
        "      <td>10130</td>\n",
        "      <td>Armidale Regional</td>\n",
        "      <td>40,733</td>\n",
@@ -2853,7 +3086,7 @@
        "      <td>42,220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>10</th>\n",
        "      <td>10250</td>\n",
        "      <td>Ballina</td>\n",
        "      <td>39,782</td>\n",
@@ -2869,44 +3102,44 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2290</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2296</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2291</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2297</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2292</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2298</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2293</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2299</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2294</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2300</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2915,17 +3148,17 @@
       ],
       "text/plain": [
        "5                 LGA           LGA NAME   2015-16   2016-17   2017-18\n",
-       "0          Australia                 NaN   47,692    48,360    49,805 \n",
-       "1     New South Wales                NaN   48,085    48,700    50,153 \n",
-       "2               10050             Albury   45,504    46,426    47,732 \n",
-       "3               10130  Armidale Regional   40,733    41,120    42,220 \n",
-       "4               10250            Ballina   39,782    40,362    42,246 \n",
+       "6          Australia                   0   47,692    48,360    49,805 \n",
+       "7     New South Wales                  0   48,085    48,700    50,153 \n",
+       "8               10050             Albury   45,504    46,426    47,732 \n",
+       "9               10130  Armidale Regional   40,733    41,120    42,220 \n",
+       "10              10250            Ballina   39,782    40,362    42,246 \n",
        "...               ...                ...       ...       ...       ...\n",
-       "2290              NaN                NaN       NaN       NaN       NaN\n",
-       "2291              NaN                NaN       NaN       NaN       NaN\n",
-       "2292              NaN                NaN       NaN       NaN       NaN\n",
-       "2293              NaN                NaN       NaN       NaN       NaN\n",
-       "2294              NaN                NaN       NaN       NaN       NaN\n",
+       "2296                0                  0         0         0         0\n",
+       "2297                0                  0         0         0         0\n",
+       "2298                0                  0         0         0         0\n",
+       "2299                0                  0         0         0         0\n",
+       "2300                0                  0         0         0         0\n",
        "\n",
        "[2295 rows x 5 columns]"
       ]
@@ -2941,7 +3174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +3183,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2961,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2970,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2979,7 +3212,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finaldf = finaldf.drop_duplicates(subset=['LGA NAME'], keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
